# siggy_scrape

./: README.md  pyproject.toml  tweets.json
src/siggy_scrape/: send_tweet.py  siggy_scrape.py  stackjoin_add.py  store_stackjoin.py  tweepy_send_tweet.py  tweets.json
