[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siggy_scrape"
version = "0.0.1"
authors = [
  { name="pleblira", email="pleblira@gmail.com" },
]
description = "Stackchain Siggy, the Scraper Edition (no Twitter API!)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]

dependencies = [
"moviepy==1.0.3",
"numpy==1.24.3",
"Pillow==9.5.0",
"Requests==2.31.0",
"APScheduler==3.10.1",
"pyairtable==1.3.0",
"python-dotenv==0.21.0",
"selenium==4.10.0"
]

[project.urls]
"Homepage" = "https://github.com/pleblira/siggy_scrape"
"Bug Tracker" = "https://github.com/pleblira/siggy_scrape/issues"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
siggy_scrape = "siggy_scrape.siggy_scrape:siggy_scrape"

[tool.setuptools.package-data]
siggy_scrape = ["*.txt"]